# check_repos

./: .gitignore  .gitlab-ci.yml  README.md  audit_remaining.py  check_repo_sync.py  configure_gitlab_github_mirrors.py  create_missing_tags.py  create_release_tags.py  pyproject.toml  requirements.txt  sync_remaining_projects.py  verify_tags.py
check_repos/: __init__.py  credentials.py  mirrors.py  sync.py  tags.py
tests/: test_sync.py
